test/translator/success/file2.prez
class Base {
  int n;

  Base(int n) {
    this.n = n;
  }

  public virtual String name() {
    return "Base";
  }
}
