test/translator/error/unused.prez
int f(int p) {
  bool b1 = true;
  return 1;
}
